# labsLipsky4sem

./: CMakeLists.txt  README.md
lab2UITests/: main.cpp
tests/: NavigationTests.cpp  ProductTests.cpp  UITests.cpp
